# docker-compose-python-node-react

./: LICENSE  Makefile  README.md  circle.yml  docker-compose.yml
.circleci/: config.yml
.github/: dependabot.yml
backend/: .flake8  Dockerfile  pyproject.toml  requirements.txt
backend/src/: middlewares.py  routes.py  server.py
backend/tests/: test_server.py
frontend/: Dockerfile  package.json
frontend/src/: App.js  Posts.js  setupProxy.js
