[tool.poetry]
name = "docker-compose-python-backend"
version = "2020.6"
description = "Backend API for boilerplate application with Sanic and React."
authors = ["yoziru"]
repository = "https://github.com/yoziru/docker-compose-python-node-react"

[tool.poetry.dependencies]
python = "^3.7"
sanic = "^20.9.0"
asyncpg = "^0.21.0"
sanic-cors = "^0.10.0"
secure = "^0.2.1"
orjson = "^3.4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
flake8 = "^3.8.4"
isort = "^5.6.3"
black = "^20.8b1"
importlib_metadata = "^2.0.0"

[tool.black]
line-length = 88
target-version = ['py36']

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
